[gd_scene load_steps=12 format=2]

[ext_resource path="res://Photons/photon_target.png" type="Texture" id=1]
[ext_resource path="res://Photons/blue_wave.png" type="Texture" id=2]
[ext_resource path="res://Photons/mask.png" type="Texture" id=3]
[ext_resource path="res://Photons/Photon.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
resource_name = "photonTarget"
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("photon_target:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}

[sub_resource type="Animation" id=2]
resource_name = "hideWave"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Photon/Light2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.696, 1 ), Vector2( 1e-05, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "moveToTarget"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Photon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -200, -200 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Photon/Light2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.696, 1 ) ]
}

[sub_resource type="CanvasItemMaterial" id=4]
light_mode = 2

[sub_resource type="Animation" id=5]
resource_name = "blueWave"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Blue:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 25.51, 0 ) ]
}

[sub_resource type="CircleShape2D" id=6]

[sub_resource type="ParticlesMaterial" id=7]
emission_shape = 1
emission_sphere_radius = 8.25
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
color = Color( 0, 0.231373, 0.764706, 1 )

[node name="PhotonShooter" type="Node2D"]
script = ExtResource( 4 )

[node name="photon_target" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="TargetAnimation" type="AnimationPlayer" parent="."]
method_call_mode = 1
anims/photonTarget = SubResource( 1 )

[node name="PhotonAnimation" type="AnimationPlayer" parent="."]
method_call_mode = 1
anims/hideWave = SubResource( 2 )
anims/moveToTarget = SubResource( 3 )

[node name="Photon" type="Node2D" parent="."]
position = Vector2( -200, -200 )
rotation = 0.785398

[node name="Light2D" type="Light2D" parent="Photon"]
scale = Vector2( 0.696, 1 )
texture = ExtResource( 3 )
offset = Vector2( -32, 0 )
mode = 2
range_item_cull_mask = 16

[node name="Blue" type="Sprite" parent="Photon"]
light_mask = 16
material = SubResource( 4 )
scale = Vector2( 0.1, 0.1 )
z_index = 1
texture = ExtResource( 2 )
centered = false
offset = Vector2( -1024, -128 )
region_rect = Rect2( 0, 0, 500, 250 )

[node name="WaveAnimation" type="AnimationPlayer" parent="Photon"]
method_call_mode = 1
anims/blueWave = SubResource( 5 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
scale = Vector2( 0.658, 0.449 )
shape = SubResource( 6 )

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
amount = 20
lifetime = 0.1
process_material = SubResource( 7 )
